--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="ro.unibuc.votingapp.VotingApplication"
+        android:name=".VotingApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
@@ -14,25 +14,29 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="ro.unibuc.votingapp.presentation.view.RecyclerViewActivity"
+            android:name=".presentation.view.NewsActivity"
+            android:label="@string/title_activity_news"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".presentation.view.RecyclerViewActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|colorMode" />
         <activity
-            android:name="ro.unibuc.votingapp.presentation.view.CreditsActivity"
+            android:name=".presentation.view.CreditsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|colorMode"
             android:launchMode="singleInstance"
             android:theme="@style/Theme.NoBackground" />
         <activity
-            android:name="ro.unibuc.votingapp.presentation.view.MainActivity"
+            android:name=".presentation.view.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|colorMode"
             android:label="@string/title_activity_main"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="ro.unibuc.votingapp.presentation.view.RegisterActivity"
+            android:name=".presentation.view.RegisterActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|colorMode"
             android:launchMode="singleInstance" />
         <activity
-            android:name="ro.unibuc.votingapp.presentation.view.LoginActivity"
+            android:name=".presentation.view.LoginActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|colorMode"
             android:launchMode="singleInstance"
             android:screenOrientation="sensor">
@@ -43,11 +47,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="ro.unibuc.votingapp.presentation.VotingAppReplacedBroadcastReceiver">
+        <receiver android:name=".presentation.VotingAppReplacedBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
-        <service android:name="ro.unibuc.votingapp.presentation.VotingAppService" />
+
+        <service android:name=".presentation.VotingAppService" />
     </application>
+
 </manifest>
