--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
     buildFeatures {
         dataBinding = true
+        viewBinding true
     }
 }
 
@@ -48,7 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-database'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -60,21 +61,21 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.navigation:navigation-runtime:2.3.5'
     implementation 'androidx.room:room-runtime:2.4.0-alpha02'
     implementation 'androidx.room:room-testing:2.4.0-alpha02'
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "androidx.work:work-runtime:2.6.0-alpha02"
+    implementation "androidx.work:work-runtime:2.6.0-beta01"
     implementation "androidx.test:runner:1.3.0"
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
     annotationProcessor 'androidx.room:room-compiler:2.4.0-alpha02'
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha06'
+    androidTestImplementation 'androidx.test:rules:1.4.0-beta02'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation "androidx.work:work-testing:2.6.0-alpha02"
+    androidTestImplementation "androidx.work:work-testing:2.6.0-beta01"
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:4.0.2"
     testImplementation 'androidx.test:core:1.3.0'
