add Text Recognizer pana aici e ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="ro.unibuc.votingapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+<!--    <uses-feature android:name="android.hardware.camera"-->
+<!--        android:required="true" />-->
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
 
     <application
         android:name=".VotingApplication"
